# rig_value_tracker

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.yaml
docs/: metric_definitions.md  project_scope.md  source_registry.md
extract/: run_extract.py
extract/common/: config.py  io_utils.py
scripts/: create_views.py
seeds/: canonical_products.csv  canonical_products.ods  source_targets.csv
sql/raw/: raw_products.sql
src/rig_value_guide.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rig_value_guide/common/: config.py
src/rig_value_guide/extract/: run_extract.py
