[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rig_value_guide"
version = "0.1.0"
description = "Local data platform for tracking PC hardware prices"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "duckdb",
  "pandas",
  "pyarrow",
  "pyyaml"
]

[tool.setuptools.packages.find]
where = ["src"]
